# plotman

./: .gitignore  README.md  setup.cfg
plotman/: __main__.py  analyzer.py  archive.py  interactive.py  job.py  manager.py  reporting.py
tests/: archive_test.py  job_test.py  manager_test.py  plot_util_test.py  reporting_test.py
