[metadata]
name = plotman
summary = chia plotting manager
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = plotman
install_requires =
    psutil
    texttable
    pyyaml
    appdirs
setup_requires =
    pytest-runner
tests_require =
    pytest
    pyfakefs
